--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <HTML>
     <head>
         <title></title>
+        <style>
+            img {
+                max-width: 75%;
+                height: auto;
+            }
+        </style>
     </head>
     <body>
         <header class="navigation">
-            <div class="logo inline-block">
+            <div class="inline-block logo">
                 <img src="Images/Personal Logo.png">
             </div>
             <nav class="inline-block">
@@ -38,6 +44,61 @@
                 </button>
             </div>
         </section>
+    
+<!-- My UX Skills section coded using CSS flex         -->
+
+<section class="mySkills">
+    <h1>
+        My UX Skills
+    </h1>
+    <div class= "flexContainer">
+        <div>
+            <img src="Images/Project 1.jpg">
+            <h3>UX Research</h3>
+            <p>Lorem ipsum...</p>
+        </div>
+        <div>
+            <img src="Images/Project 2.jpg">
+            <h3>User Interface Design</h3>
+            <p>Lorem ipsum...</p>
+        </div>
+        <div>
+            <img src="Images/Project 3.jpg">
+            <h3>Web Development</h3>
+            <p>Lorem ipsum...Lorem ipsum...Lorem ipsum...Lorem ipsum...Lorem ipsum...Lorem ipsum...Lorem ipsum...Lorem ipsum...Lorem ipsum...</p>
+        </div>
+    </div>
+</section>
+
+<!-- My Work section coded using CSS grid         -->
+
+<section class="myWork">
+    <h1>
+        My Work
+    </h1>
+    <div class="workGrid">
+        <div><img src="Images/Project 3.jpg"></div>
+        <div>
+            <h4>Project A</h4>
+            <p>Lorem ipsum...Lorem ipsum...Lorem ipsum...Lorem ipsum...Lorem ipsum...Lorem ipsum...Lorem ipsum...Lorem ipsum...Lorem ipsum...</p>
+            <button>View Case Study</button>
+        </div>
+        <div><img src="Images/Project 2.jpg"></div>
+        <div>
+            <h4>Project B</h4>
+            <p>Lorem ipsum...</p>
+            <button>View Case Study</button>
+        </div>
+        <div><img src="Images/Project 1.jpg"></div>
+        <div>
+            <h4>Project C</h4>
+            <p>Lorem ipsum...</p>
+            <button>View Case Study</button>
+        </div>
+    </div>
+    <h3>View all projects -></h3>
+</section>
+
 
         <footer>
             <button>
