--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </header>
         <section class="heroImg">
             <div class="content">
-                <img src="images/Headshot.png">
+                <img src="Images/Headshot.png">
                 <h1>
                     Hi, I'm Brandon, a UX Designer in Austin, TX.
                 </h1>
